# frankentracer

./: CMakeLists.txt  Makefile  aobench  build.sh  building-raytracer.ipynb  cpp-smallpt  main2.cpp  q  run.sh  setvars.sh
.ipynb_checkpoints/: building-raytracer-checkpoint.ipynb
imgs/: out5.ppm  out6.ppm  out7.ppm  out8.ppm  out9.ppm
include/: geometry.h
src/: CMakeLists.txt  aobench.cpp  cpp-smallpt.cpp  lesson1.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp
src-aobench/: CMakeLists.txt  aobench.cpp
src-smallpt/: CMakeLists.txt
